--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <h2>Instructions</h2>
       <p>Hello. Below is a special code which a student will require to start their exam.</p>
       <div class="ip-container">
-        <input type="text" id="ip" class="ip-textbox" readonly />
+         <input type="text" value="521.941.744">
         <button id="copy-btn" class="copy-btn">Copy</button>
       </div>
       <script>
