--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -50,7 +51,7 @@
       <h2>Instructions</h2>
       <p>Hello. Below is a special code which a student will require to start their exam.</p>
       <div class="ip-container">
-         <input type="text" value="521.941.744">
+        <input type="text" id="ip" class="ip-textbox" readonly />
         <button id="copy-btn" class="copy-btn">Copy</button>
       </div>
       <script>
