--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crestwood Academy</title>
+    <meta name="description" content="The Official Website for Crestwood Academy.">
     <h1>Crestwood Academy Verification Page</h1>
     <style>
       html {
